creation of culpable

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </aside>
     
     <footer>
-        <p>Descubre quien mató a Cristiano Ronaldo</p>
+        <p>Descubre quién mató a Cristiano Ronaldo</p>
     </footer>
 </body>
 </html>
